# taranaa

./: .env  .sesskey  README copy.md  app.py  bookings.json  directory.txt  main copy.py  main.py  message_history.json  profile.json  pyproject.toml  requirements.txt  test.py  testAuth.py  testChat.py  testGoogle.py  testGoogleV1.py  trips.json
agents/: get_itinenary.py  get_rooms.py  get_weather.py  master_agent.py
data/: counts.db
models/: models.py
pages/: client_secret_1045002730895-pij09pvmhjnnb3eff71fl21kfeu3smul.apps.googleusercontent.com.json
pages/booking/: booking.py
pages/profile/: profile.py
reference/: api-list.txt  fasthtml.txt  llms-ctx-full.txt  llms-ctx.txt  llms.txt
utils/: db_con.py
